chore: main Добавлены Story для UiTooltipContent, а также приведены в порядок остальные Story

--- a/src/stories/UiText/UiText.css
+++ b/src/stories/UiText/UiText.css
@@ -1,4 +1,5 @@
 :root {
+    /* Цвета для текста */
     --color-text-default: #213547;
     --color-text-hover: #304a60;
     --color-text-active: #162633;
