--- a/src/stories/UiTooltipContent/UiTooltipContent.css
+++ b/src/stories/UiTooltipContent/UiTooltipContent.css
@@ -2,14 +2,17 @@
     /* Фоны */
     --background-color-default: #fff;
     --background-color-secondary: #dcdcdc;
-    --background-color-accent: #335fd9;
-    --background-color-surface: #909090;
-    --background-color-muted: #c0bebe;
-    --background-color-quiet: #ebd997;
+
+    /* Цвета для текста */
+    --color-text-default: #213547;
 
     /* Границы */
     --color-border-default: #232323;
     --color-border-secondary: #f38d56;
     --color-border-accent: #455ed8;
     --color-border-muted: #a1a4b7;
+
+    /* Тени */
+    --shadow-s: 0 1px 2px 0 rgb(0 0 0 / 15%);
+    --shadow-m: 0 4px 40px 0 rgb(0 0 0 / 35%);
 }
